# imap-cleanup-tool

./: .gitattributes  .gitignore  CLA.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-and-release.yml  tests.yml
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
packaging/: README.md  constraints.txt  publish-release.py
packaging/linux/: .gitignore  AppRun  README.md  build.sh  imap-cleanup-tool.desktop
packaging/msix/: .gitignore  AppxManifest.xml  README.md
packaging/windows/: .gitignore  README.md  build.ps1  installer.iss  launcher.cs  launcher.py
src/imap_cleanup_tool/: __init__.py  ai.py  cli.py  core.py  gui.py  headercache.py  llm.py  notifications.py  oauth.py  profiles.py  query_builder.py  rule_parser.py  rules.py  scheduler.py  spamstore.py  targets.py  unsubscribe.py  webapp.py
src/imap_cleanup_tool/assets/: llm_models.json  oauth_providers.json  providers.json  smtp_providers.json
src/imap_cleanup_tool/web/: providers.json  smtp_providers.json
src/imap_cleanup_tool/web/static/: index.html
tests/: test_ai.py  test_export.py  test_headercache.py  test_llm.py  test_move.py  test_notifications.py  test_oauth.py  test_profiles.py  test_rule_parser.py  test_rules.py  test_scheduler.py  test_spamstore.py  test_targets.py  test_unsubscribe.py  test_webapp.py
