[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imap-cleanup-tool"
version = "0.10.4"
description = "Delete or move IMAP emails by sender, domain, or rules, plus local-first AI Cleanup (BYO API key) - CLI and web UI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Giulio Alberello", email = "support@imapcleanuptool.com" }]
keywords = ["imap", "email", "gmail", "inbox", "cleanup", "email-cleanup",
            "inbox-cleanup", "mailbox", "imap-client", "spam", "cli", "web",
            "fastapi", "python", "ai", "llm", "litellm", "ollama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Email",
    "Topic :: Communications :: Email :: Post-Office :: IMAP",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
# Core + CLI have NO third-party runtime dependencies: stdlib only (imaplib,
# argparse). The web UI is an optional extra (see [web]).
dependencies = []

[project.optional-dependencies]
# Local web UI (FastAPI + uvicorn; cryptography for encrypted connection
# profiles). Install with: pip install "imap-cleanup-tool[web]"
web = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "cryptography>=42"]
# AI Cleanup: LLM access via litellm (cloud or local). Optional; imported lazily.
ai = ["litellm>=1.0", "cryptography>=42"]
# Tools for development and packaging.
dev = ["pylint", "build", "twine"]

[project.urls]
Homepage = "https://github.com/mrpickles007/imap-cleanup-tool"
Issues = "https://github.com/mrpickles007/imap-cleanup-tool/issues"

[project.scripts]
imap-cleanup-tool = "imap_cleanup_tool.cli:main"
imap-cleanup-tool-web = "imap_cleanup_tool.webapp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/imap_cleanup_tool"]
